[gd_scene load_steps=2 format=3 uid="uid://ctfyno614vedj"]

[ext_resource type="Script" path="res://first_time_player/first_time_player_game_data.gd" id="1_vhsnu"]

[node name="FirstTimePlayerGameData" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_vhsnu")

[node name="Label" type="Label" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -336.0
offset_top = -305.0
offset_right = 337.0
offset_bottom = -243.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 36
text = "What's your name?"
horizontal_alignment = 1

[node name="Label4" type="Label" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -336.0
offset_top = -93.0
offset_right = 337.0
offset_bottom = -31.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 36
text = "Pick a form."
horizontal_alignment = 1

[node name="Label2" type="Label" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -496.5
offset_top = -252.0
offset_right = 497.5
offset_bottom = -190.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 25
text = "(This is used in game and can be changed any time.)"
horizontal_alignment = 1

[node name="Label3" type="Label" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -496.5
offset_top = -40.0
offset_right = 497.5
offset_bottom = 22.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 25
text = "(This is used in game and can be changed any time.)"
horizontal_alignment = 1

[node name="NameLineEdit" type="LineEdit" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -408.5
offset_top = -195.0
offset_right = 408.5
offset_bottom = -135.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 30
placeholder_text = "Your name here"
alignment = 1

[node name="GenderOptionButton" type="OptionButton" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -407.5
offset_top = 13.0
offset_right = 407.5
offset_bottom = 72.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 30
item_count = 2
popup/item_0/text = "Male"
popup/item_0/id = 0
popup/item_1/text = "Female"
popup/item_1/id = 1

[node name="StateLabel" type="Label" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -335.5
offset_top = 115.0
offset_right = 337.5
offset_bottom = 177.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 36
horizontal_alignment = 1

[node name="SetUsernameButton" type="Button" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -166.0
offset_top = 186.0
offset_right = 166.0
offset_bottom = 249.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 30
text = "Next"

[connection signal="pressed" from="SetUsernameButton" to="." method="_on_set_username_button_pressed"]
